k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pathfinder
  labels:
    app: pathfinder
spec:
  selector:
    app: pathfinder
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  type: ClusterIP
